Fix Completion Handler for Enchants.